--- a/elements.html
+++ b/elements.html
@@ -57,9 +57,10 @@
 										<center><h2 class="major">我的Holland碼類型為 :l研究型 & S社會型</h2>
 										<p> l研究型: 善於觀察、思考、分析與推理，喜歡用頭腦依自己的步調來解決問題，並追根究底</p>
 										<p> S社會型: 對人和善，容易相處，他們關心自己和別人的感受 </p>
-										<img src="images/result.jpg" width="700" height="600" alt=""></center><br/><br/><br/></a></center>
+										<img src="image"><img src="myself.png" width="700"
+										 height="600" alt=""></center><br/><br/><br/></a></center>
 										<center><h2 class="major">此類型最常從事的職業</h2>
-										<img src="images/job.jpg" alt="" /></a></center>
+										<img src="image"><img src="myself2.png" alt="" /></a></center>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
