--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="me.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="me.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">基本資料</h2>
 										<p>姓名:邱建勳<br />
@@ -68,7 +68,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/show.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="me.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">高中、大學經歷</h2>
 										<p>
@@ -85,7 +85,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/travel.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="123.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">興趣專長</h2>
 										<p>
