--- a/intro.html
+++ b/intro.html
@@ -46,12 +46,16 @@
 										<h2 class="major">我未來想從事的工作 : 網頁設計工程師</a></h2>
 										<p>
 										原因 :<br/>
-										從測驗結果發現自己是屬於SA社會藝術型，自己在藝術方面有一定的實力，同時我也很享受設計這件事情，接觸到HTML後才確定自己想往這條路發展。<br/><br/>
-										工作內容 :<br/>
-										網路設計工程師負責規劃、設計和實施企業網路基礎設施，確保穩定運行並滿足業務需求。進行網路拓撲設計、配置硬體設備、管理網路安全，並解決網路故障。網路設計工程師密切合作於團隊，與其他IT專業人員協作，以確保網路架構的高效性和可擴展性。熟練運用網路技術、協議和工具，追求最佳化性能。<br/><br/>
+										從測驗結果發現自己是屬於IA社會研究型，對於設計這件事情，從小也有興趣，很多的想法萌生但沒有實現，接觸到資訊系後才確定自己想往這條路發展。<br/><br/>
+										工作內容 :<br/>運用電腦網頁設計軟體，結合電腦系統之文字、聲光、音樂、圖片、影像及動畫功能，將新聞、知識、資訊、輿論或廣告，編撰設計成網路媒體網頁內容
+										依照電腦輸入與輸出之多媒體功能，進行綜合設計，並用電腦網頁設計語言撰寫程式
+										測試、偵錯及安裝電腦網路媒體網頁
+										對電腦網路客戶，提供網頁設計諮詢服務及技術性建議
+										網站內容維護：包含活動網頁設計、Banner設計、EDM視覺設計
+										<br/><br/>
 										如何充實自我 :<br/>
-										1.建立堅實的計算機網路基礎知識，運用網路上的教學資源，多多點閱網頁學習更多樣化的排版<br/>
-										2.取得相關的網路認證，例如 : CCNA 、CCNP<br/>
+										1.運用網路上的教學資源，學習不同的模板以及累積經驗<br/>
+										2.取得相關的證照認證，例如 : CCNA 、CCNP<br/>
 										3.熟練使用網路工具和軟體，如Wireshark、Packet Tracer、GNS3等，以進行網路分析和模擬
 										</p>
 									</div>
@@ -62,7 +66,7 @@
 						<header>
 							<div class="inner">
 								<h2 class="major">求職履歷</h2>
-								<img src="images/intro.jpg" alt="" /></a>
+								<img src="image"><img src="aaa.png" alt="" /></a>
 								</div>
 							</div>
 
